--- a/src/app/enfant/enfant.component.html
+++ b/src/app/enfant/enfant.component.html
@@ -39,12 +39,10 @@
 
       <div class="flex flex-col gap-2 " *ngFor="let item of enfantItems">
         <div class="relative inline-block group">
-          <img src="assets/images/enfant/{{item.image}}.jpg" class="shadow-md">
-          <div class="overlay absolute inset-0 bg-slate-800 opacity-0 group-hover:opacity-30 transition-opacity duration-300 shadow-md"></div>
-          <button class="p-2 flex justify-center items-center gap-1 absolute bottom-0 transform translate-x-1/2 -translate-y-1/2 opacity-0 group-hover:opacity-100 transition-opacity duration-300 text-gray-300 hover:text-white">
-            <i class="fa-solid fa-cart-plus"></i>
-            <p class="underline">ADD TO CART</p>
-          </button>
+          <div class="gallery">
+            <img src="assets/images/enfant/e{{item.id}}/e1.jpg" class="shadow-md">
+            <img src="assets/images/enfant/e{{item.id}}/e2.jpg" class="shadow-md">
+          </div>
           <button class="p-2 absolute top-10 right-10 transform translate-x-1/2 -translate-y-1/2 opacity-0 group-hover:opacity-100 transition-opacity duration-300 text-gray-400 hover:text-black">
             <i class="fa-regular fa-heart p-2 bg-white rounded-full shadow-md"></i>
           </button>
@@ -59,7 +57,12 @@
             <button><i class="fa-solid fa-circle text-yellow-500"></i></button>
           </div>
           <p class="font-extrabold">$ {{item.price}}</p>
+          <button class="p-2 flex justify-center items-center gap-1 font-bold border border-orange-500 inverted-5" style="color: #0000;">
+            <i class="fa-solid fa-cart-plus"></i>
+            <p class="underline">ADD TO CART</p>
+          </button>
         </div>
+
       </div>
 
 
