--- a/src/app/acceuil/acceuil.component.html
+++ b/src/app/acceuil/acceuil.component.html
@@ -169,7 +169,7 @@
         <div class="md:flex items-center -mx-10">
             <div class="w-full md:w-1/2 px-10 mb-10 md:mb-0">
                 <div class="relative">
-                    <img src="assets/images/homme/h1.jpg" class="w-full relative z-10 border border-blue-500" alt="">
+                    <img id="img" src="assets/images/homme/h1/h1.jpg" class="w-full relative z-10" alt="">
                 </div>
             </div>
             <div class="w-full md:w-1/2 px-10">
