--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,9 +5,9 @@
     <p class="text-center font-bold tracking-wider py-3" *ngIf="currentIndex === i">{{ p.title }}</p>
   </div>
 
-  <div class="bg-gray-200 flex flex-col pt-4">
+  <div class="bg-gray-200 flex flex-col pt-2">
 
-      <div class="grid grid-cols-6 justify-center items-center pb-10 ">
+      <div class="grid grid-cols-6 justify-center items-center pb-5 ">
         <div class="col-span-2 flex justify-center items-center gap-3">
           <button><i class="fa-solid fa-magnifying-glass"></i></button>
           <input class="outline-none border-b border-black px-2 bg-gray-200 tracking-widest" type="search" placeholder="une coleur ...">
@@ -18,7 +18,7 @@
         <div class="col-span-2 flex justify-center items-center gap-10 text-lg">
 
           <div class="relative group">
-            <a href="/compte" class="py-2 px-2">
+            <a routerLink="/compte" class="py-2 px-2">
               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 6a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0zM4.501 20.118a7.5 7.5 0 0114.998 0A17.933 17.933 0 0112 21.75c-2.676 0-5.216-.584-7.499-1.632z" />
               </svg>
@@ -47,14 +47,14 @@
         </div>
       </div>
 
-      <nav class="flex justify-center items-center tracking-widest pb-1 border-b border-black">
+      <nav class="flex justify-center items-center tracking-widest pb-0.5 border-b border-black">
         <div class="space-x-16 bg-gray-200 flex justify-center items-center">
           <div>
-            <a routerLink="/" class="text-black text-sm hover:font-bold cursor-pointer">ACCEUIL</a>
+            <a id="a" routerLink="/acceuil" class="text-black text-sm font-bold cursor-pointer  transition duration-300 ease-linear" routerLinkActive="router-link-active">ACCEUIL</a>
           </div>
 
           <div class="relative group">
-            <a routerLink="/homme" class="text-black text-sm hover:font-bold cursor-pointer py-2">HOMME </a>
+            <a id="a" routerLink="/homme" class="text-black text-sm font-bold cursor-pointer py-2  transition duration-300 ease-linear" routerLinkActive="router-link-active">HOMME </a>
             <div class="absolute left-0 mt-1 hidden group-hover:block bg-white py-8 px-2 shadow-md">
               <div class="flex gap-10">
                 <div class=" w-40 h-40 flex justify-center items-center">
@@ -79,7 +79,7 @@
           </div>
 
           <div class="relative group">
-            <a routerLink="/femme" class="text-black text-sm hover:font-bold cursor-pointer py-2">FEMME</a>
+            <a id="a" routerLink="/femme" class="text-black text-sm font-bold cursor-pointer py-2 ease-linear transition duration-300" routerLinkActive="router-link-active">FEMME</a>
             <div class="absolute left-0 mt-1 hidden group-hover:block bg-white py-8 px-2 shadow-md">
               <div class="flex gap-10">
                 <div class=" w-40 h-40 flex justify-center items-center">
@@ -103,7 +103,7 @@
           </div>
 
           <div class="relative group">
-            <a routerLink="/enfant" class="text-black text-sm hover:font-bold cursor-pointer py-2">ENFANT</a>
+            <a id="a" routerLink="/enfant" class="text-black text-sm font-bold cursor-pointer py-2 ease-linear transition duration-300" routerLinkActive="router-link-active">ENFANT</a>
             <div class="absolute left-0 mt-1 hidden group-hover:block bg-white py-8 px-2 shadow-md">
               <div class="flex gap-10">
                 <div class=" w-40 h-40 flex justify-center items-center">
@@ -128,7 +128,7 @@
           </div>
 
           <div>
-            <a routerLink="/univer" class="text-black text-sm hover:font-bold cursor-pointer">L'UNIVERS T-SHIRT</a>
+            <a id="a" routerLink="/univer" class="text-black text-sm font-bold cursor-pointer py-2 ease-linear transition duration-300" routerLinkActive="router-link-active">L'UNIVERS T-SHIRT</a>
           </div>
         </div>
       </nav>
