--- a/src/app/univer/univer.component.html
+++ b/src/app/univer/univer.component.html
@@ -17,7 +17,7 @@
     </div>
 
     <div class="grid grid-cols-2 px-36 py-20 gap-20">
-      <img src="assets/images/hero2.jpg" alt="">
+      <img class="border border-orange-500 shadow-md" src="assets/images/hero2.jpg" alt="">
       <div class="flex flex-col justify-center">
         <p class="text-2xl font-extralight tracking-widest">Confort, style et couleurs</p>
         <p class="text-gray-700 mt-5 font-extralight" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Chez T-shop, nous avons mis l'accent sur la création de t-shirts qui offrent une expérience
@@ -38,7 +38,7 @@
     <div class="flex flex-col gap-20 py-10">
 
       <div class="grid grid-cols-2 px-52  gap-10">
-        <img src="assets/images/hero.png" class="w-96 h-auto" alt="">
+        <img id="img" src="assets/images/hero.png" class="w-96 h-auto" alt="">
         <div class="flex flex-col justify-center">
           <p class="text-2xl font-extralight tracking-widest">LE RÉPARATION</p>
           <p class="text-gray-700 mt-5 font-extralight" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">CTelles des magiciennes
@@ -57,10 +57,10 @@
             Pour rendre votre cachemire Eric Bompard encore plus beau, vous pouvez bénéficier de notre service de pressing professionnel et spécialisé en maille.
           </p>
         </div>
-        <img src="assets/images/hero1.png" class="w-96 h-auto" alt="">
+        <img id="img" src="assets/images/hero1.png" class="w-96 h-auto" alt="">
       </div>
       <div class="grid grid-cols-2 px-36 gap-20">
-        <img src="assets/images/hero2.png" class="w-96 h-auto" alt="">
+        <img id="img" src="assets/images/hero2.png" class="w-96 h-auto" alt="">
         <div class="flex flex-col justify-center">
           <p class="text-2xl font-extralight tracking-widest">UP-CYCLING</p>
           <p class="text-gray-700 mt-5 font-extralight" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Dans la lignée de notre engagement
@@ -78,6 +78,7 @@
         acteurs principaux de la maille écoresponsable et avec une démarche « slow fashion ».</p>
         <p class="text-center tracking-widest font-bold text-orange-500 mt-16">Illustrations : izem bilal</p>
     </div>
+
 
 
 
