--- a/src/styles.css
+++ b/src/styles.css
@@ -7,3 +7,48 @@ body,html{
   font-family: 'Rubik', sans-serif;
 }
 
+
+.gallery {
+  --g: 8px;
+
+  display: grid;
+  clip-path: inset(1px);
+}
+.gallery > img {
+  --_p: calc(-1*var(--g));
+  grid-area: 1/1;
+  width: 350px;
+  aspect-ratio: 1;
+  cursor: pointer;
+  transition: .4s .1s;
+}
+.gallery > img:first-child {
+  clip-path: polygon(0 0, calc(100% + var(--_p)) 0 , 0 calc(100% + var(--_p)))
+}
+.gallery > img:last-child {
+  clip-path: polygon(100% 100%, 100% calc(0% - var(--_p)), calc(0% - var(--_p)) 100%)
+}
+.gallery:hover > img:last-child,
+.gallery:hover > img:first-child:hover{
+  --_p: calc(50% - var(--g));
+}
+.gallery:hover > img:first-child,
+.gallery:hover > img:first-child:hover + img{
+  --_p: calc(-50% - var(--g));
+}
+
+
+
+.inverted-5 {
+  background:
+    conic-gradient(from -135deg, #fff 0 90deg, #f97316 0),
+    conic-gradient(from -135deg, #f97316 0 90deg, #ffff 0);
+  -webkit-background-clip: text,padding-box;
+  background-clip: text,padding-box;
+  background-size: 200% 100%;
+  background-position: right;
+  transition: 0.5s;
+}
+.inverted-5:hover {
+  background-position: center;
+ }
